<resources>
    <string name="app_name">SDRCIMS</string>
    <string name="device_management">Device Management</string>
    <string name="leave_management">Leave Management</string>
    <string name="inhouse_management">Training Management</string>
    <string name="course_name_hint">Enter Course Name</string>
    <string name="course_code_hint">Enter Course Code</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">From</string>
    <string name="end_time">To</string>
    <string name="attach_course_structure">Attach Course Structure</string>
    <string name="remarks">Enter Remarks</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="trainer_name">Trainer Name</string>
    <string name="email">Enter Email Id</string>
    <string name="course_announcement">Course Announcement</string>
    <string name="course_enrollment">Course Enrollment</string>
    <string name="feedback">Give Feedback</string>
    <string name="baseurl">http://192.168.1.109:8080/</string>
    <string name="course_code_errmsg">Course Code cannot be empty!</string>
    <string name="course_name_errmsg">Course_Name cannot be empty!</string>
    <string name="start_date_errmsg">Start Date cannot be empty!</string>
    <string name="end_date_errmsg">End Date cannot be empty!</string>
    <string name="start_time_errmsg">Start Time cannot be empty!</string>
    <string name="end_time_errmsg">End Time cannot be empty!</string>
    <string name="trainer_name_errmsg">Please select Trainer Name!</string>
    <string name="attach_file_errmsg">Please attach file!</string>
    <string name="email_empty_msg">email cannot be empty</string>
    <string name="email_regexmsg">please enter valid email</string>
    <string name="add_new_device">New Device</string>
    <string name="manage_device">Manage Device</string>
    <string name="view_device_history">View Device History</string>
    <string name="select_device_type">Select Device Type</string>
    <string name="device_name">Device Name</string>
    <string name="model_number">Device Model Number</string>
    <string name="firmware">Firmware</string>
    <string name="firmware_version">Firmware Version</string>
    <string name="mac_adress">Mac Adress</string>
    <string name="select_date_puchase">Select Purchase Date</string>
    <string name="serial_number">Device Serial Number</string>
    <string name="add_device">Add Device</string>
    <string name="add_device_description">Description</string>
    <string name="select_barcode_new">Scan for barcode</string>
    <string name="view_device_history_name">Device History</string>
    <string name="token" />
    <string name="login">Login</string>
    <string name="password">Enter Password</string>
    <string name="home">Home</string>
    <string name="cookie">Cookie</string>

</resources>
