<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="org.sdrc.sdrcims.activity.ManageTrainingActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:id="@+id/course_ann_btn"
        android:text="@string/course_announcement" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:id="@+id/course_enroll_btn"
        android:text="@string/course_enrollment" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:id="@+id/feedback_btn"
        android:text="@string/feedback" />


</LinearLayout>
