<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="org.sdrc.sdrcims.activity.CourseAnnouncementActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/course_code_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:hint="@string/course_code_hint"
            android:padding="10dp" />

        <EditText
            android:id="@+id/course_name_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/edit_text"
            android:hint="@string/course_name_hint"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:weightSum="2">

            <EditText
                android:id="@+id/start_date_edt"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:hint="@string/start_date"
                android:padding="10dp"
                android:paddingTop="8dp" />

            <EditText
                android:id="@+id/end_date_edt"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:hint="@string/end_date"
                android:padding="10dp"
                android:paddingTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:weightSum="2">

            <EditText
                android:id="@+id/start_time_edt"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:hint="@string/start_time"
                android:padding="10dp"
                android:paddingTop="8dp" />

            <EditText
                android:id="@+id/end_time_edt"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:hint="@string/end_time"
                android:padding="10dp"
                android:paddingTop="8dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight=".28"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_border"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/trainer_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@mipmap/drop" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/attachment_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/attachment_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/attachment_img"
                android:text="@string/attach_course_structure"
                android:textSize="18sp" />

        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:padding="5dp"
            android:id="@+id/attachment_tv"/>
        <EditText
            android:id="@+id/email_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/edit_text"
            android:hint="@string/email"
            android:padding="10dp" />

        <EditText
            android:id="@+id/remarks_edt"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/edit_text"
            android:gravity="top"
            android:hint="@string/remarks"
            android:padding="10dp" />
    </LinearLayout>
    </ScrollView>

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"

       android:layout_alignParentBottom="true">
       <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:weightSum="2">

       <Button
           android:id="@+id/reset_btn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/reset" />

       <Button
           android:id="@+id/submit_btn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/submit" />

   </LinearLayout>
   </RelativeLayout>




</RelativeLayout>
