<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="org.sdrc.sdrcims.activity.AddDeviceActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_weight=".28"
                android:layout_marginTop="10dp"
                android:background="@drawable/spinner_border"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/device_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:spinnerMode="dropdown"
                    />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@mipmap/drop" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </RelativeLayout>


            <EditText
                android:id="@+id/device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/edit_text"
                android:hint="@string/device_name"
                android:padding="10dp" />

            <EditText
                android:id="@+id/model_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/edit_text"
                android:hint="@string/model_number"
                android:padding="10dp" />


            <EditText
                android:id="@+id/serial_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/edit_text"
                android:hint="@string/serial_number"
                android:padding="10dp" />


                <EditText
                    android:id="@+id/firmware"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:drawable/edit_text"
                    android:hint="@string/firmware"
                    android:padding="10dp"
                    android:paddingTop="8dp" />

            <EditText
                android:id="@+id/firmware_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/edit_text"
                android:hint="@string/firmware_version"
                android:padding="10dp"
                android:paddingTop="8dp" />


            <EditText
                android:id="@+id/mac_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/edit_text"
                android:gravity="top"
                android:hint="@string/mac_adress"
                android:padding="10dp" />
            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/edit_text"
                android:gravity="top"
                android:hint="@string/add_device_description"
                android:padding="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_weight=".28"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/select_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:drawable/edit_text"
                android:gravity="top"
                android:hint="@string/select_date_puchase"
                android:padding="10dp" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@mipmap/datepicker" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <Button
                    android:id="@+id/reset_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset"
                    />

                <Button
                    android:id="@+id/add_devie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_device"
                    />

            </LinearLayout>
        </LinearLayout>



    </ScrollView>


</RelativeLayout>
